# extreme-robot

./: .gitignore  CLAUDE.md  Dockerfile  README.md  WORK_STATUS.md  docker-compose.gpu.yml  docker-compose.wsl.yml  docker-compose.yml
project_docs/: CLAUDE_Plan.md  PHASE3_FSM_설계.md  WORK_STATUS.md  파워트레인_계약_충돌점검.md
ros2_ws/: capture_pick.py  check_servo.py  diag_servo.py  fix_servo.py  fix_servo2.py  hw7_gripper_bottle_test.py  measure_position_error.py  move_servo.py  run_perception.sh  scan_dynamixel_ids.py
ros2_ws/src/dynamixel_control/: package.xml  setup.py
ros2_ws/src/dynamixel_control/dynamixel_control/: arm_fsm_node.py  contract.py  dynamixel_gui_node.py  dynamixel_position_node.py  gripper_calibration.py  gripper_load_calibration.py  gripper_presets.py  joystick_teleop_node.py  keyboard_teleop_node.py  moveit_dynamixel_bridge.py  perception_node.py  qos_profiles.py  teleop_core_node.py  yolo_detection_node.py  yolo_to_dynamixel_bridge.py
ros2_ws/src/dynamixel_control/launch/: bench.launch.py  teleop.launch.py
ros2_ws/src/dynamixel_control/rviz/: teleop.rviz
ros2_ws/src/pick_test_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_arm_description/: CMakeLists.txt  package.xml
ros2_ws/src/robot_arm_moveit_config/: .setup_assistant  package.xml
ros2_ws/src/robot_arm_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/robot_arm_msgs/msg/: ArrivalStatus.msg  DetectedObject.msg  DetectedObjectArray.msg
ros2_ws/src/robot_arm_perception/: package.xml  setup.cfg  setup.py
scripts/: live_yaw_view.py
(+171 files in other folders)
